<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gruponuevo"
    tools:context=".RegistroActivity">

    <TextView
        android:id="@+id/TextTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextTitulo"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/TextNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/TextNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextTitulo"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:padding="8dp"/>

    <EditText
        android:id="@+id/TextNumero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/TextNumero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextNombre"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        android:padding="8dp"/>

    <EditText
        android:id="@+id/TexEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/TextEmail"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextNumero"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        />

    <EditText
        android:id="@+id/TextEscolar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/TextEscolar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TexEmail"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        android:padding="8dp"/>

    <!-- Espacio adicional o línea separadora -->
    <View
        android:layout_width="0dp"
        android:layout_height="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextEscolar"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextEscolar"
        android:layout_marginTop="18dp">

        <Button
            android:id="@+id/btnCrear"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/btnCrear"/>

        <Button
            android:id="@+id/btnLeer"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            android:text="@string/btnLeer"/>

        <Button
            android:id="@+id/btnActualizar"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            android:text="@string/btnActualizar"/>

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            android:text="@string/btnEliminar"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
