<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gourmet"
    tools:context=".EmpresaActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Espacio superior -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:orientation="vertical"/>

            <TextView
                android:text="@string/TextNom"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium" />

            <!-- Espacio superior -->
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@android:color/white"
                android:layout_marginBottom="5dp" />

            <TextView
                android:text="@string/TextViewEmpresa"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:gravity="center"
                android:layout_height="wrap_content" />

            <!-- Espacio superior -->
            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:color/white"
                android:layout_marginBottom="10dp" />

            <TextView
                android:text="@string/TextViewTIEMPOS"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:gravity="center"
                android:layout_height="wrap_content" />

            <!-- Espacio superior -->
            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:color/white"
                android:layout_marginBottom="10dp" />

            <TextView
                android:text="@string/TextViewEmpresa1"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:gravity="center"
                android:layout_height="wrap_content" />

            <!-- Espacio superior -->
            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:color/white"
                android:layout_marginBottom="10dp" />

            <TextView
                android:text="@string/TextViewEmpresa2"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:gravity="center"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
